criação do agente1 e agent2 funcionais e api respondendo no navegador

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,11 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "agno>=2.3.2",
+    "aiosqlite>=0.21.0",
+    "fastapi>=0.122.0",
     "google-genai>=1.52.0",
     "python-dotenv>=1.2.1",
+    "sqlalchemy>=2.0.44",
     "tavily-python>=0.7.13",
+    "uvicorn>=0.38.0",
 ]
