--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "aiosqlite>=0.21.0",
     "fastapi>=0.122.0",
     "google-genai>=1.52.0",
+    "pymupdf>=1.26.6",
     "python-dotenv>=1.2.1",
     "sqlalchemy>=2.0.44",
     "tavily-python>=0.7.13",
